--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/forms": "^7.2.4",
+    "@angular/http": "^7.2.4",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
+    "@swimlane/ngx-datatable": "^14.0.0",
     "@types/jquery": "^3.3.29",
+    "angular-6-datatable": "^0.8.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
