improved UI-added logo-datatables-and -onboarding forms

--- a/package.json
+++ b/package.json
@@ -12,28 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.6",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "^7.2.4",
     "@angular/http": "^7.2.4",
+    "@angular/material": "^7.3.3",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
-    "@swimlane/ngx-datatable": "^14.0.0",
-    "@types/jquery": "^3.3.29",
+    "@swimlane/ngx-datatable": "13.1.0",
     "angular-6-datatable": "^0.8.0",
+    "angular-datatables": "^7.0.0",
     "angular-font-awesome": "^3.1.2",
-    "bootstrap": "^4.2.1",
+    "angular-sweetalert-service": "^2.0.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "ng-block-ui": "^2.1.1",
+    "ng2-datatable": "^0.1.2",
+    "ng2-validation": "^4.2.0",
     "ngx-bootstrap": "^3.2.0",
+    "ngx-toastr": "^9.1.2",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
@@ -43,8 +53,10 @@
     "@angular/cli": "~7.3.0",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/datatables.net": "^1.10.15",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.29",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "enhanced-resolve": "^3.3.0",
