--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "ngx-bootstrap": "^3.2.0",
     "ngx-toastr": "^9.1.2",
     "path": "^0.12.7",
-    "rxjs": "~6.3.3",
-    "rxjs-compat": "^6.4.0",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "6.3.3",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
