--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "typeRoots": [
       "node_modules/@types","src/typings.d.ts"
     ],
+    "@app/*": ["src/app/*"],
+    "@environments/*": ["src/environments/*"],
     "lib": [
       "es2018",
       "dom"
