started on login and user management

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,10 @@
     "typeRoots": [
       "node_modules/@types","src/typings.d.ts"
     ],
-    "@app/*": ["src/app/*"],
-    "@environments/*": ["src/environments/*"],
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@environments/*": ["src/environments/*"]
+},
     "lib": [
       "es2018",
       "dom"
