--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~7.3.0",
     "@angular/animations": "^7.2.6",
     "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
