--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # compiled output
 #/dist
 # auth files
-#/src/app/services/authentication.service.ts
-#/src/app/services/api.service.ts
+src/app/services/authentication.service.ts
+src/app/services/api.service.ts
 #temp and ouput
 /tmp
 /out-tsc
