added date range component on sales list-awaiting service addition

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
-
   },
   "private": true,
   "dependencies": {
@@ -44,8 +43,10 @@
     "ng-block-ui": "^2.1.1",
     "ng-multiselect-dropdown": "^0.2.3",
     "ng2-datatable": "^0.1.2",
+    "ng2-daterangepicker": "^2.0.12",
     "ng2-validation": "^4.2.0",
     "ngx-bootstrap": "^3.2.0",
+    "ngx-daterangepicker-material": "^2.1.1",
     "ngx-intl-tel-input": "^2.1.1",
     "ngx-toastr": "^9.2.0",
     "path": "^0.12.7",
