--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angular-password-strength-meter": "0.0.4",
     "angular-sweetalert-service": "^2.0.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
